--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -36,6 +36,7 @@
     color: #fff;
     border-radius: 10px;
     font-size: 16px;
+    margin-top: 20px;
 }
 .body-header button:hover{
     cursor: pointer;
