--- a/src/Components/Featured/style.css
+++ b/src/Components/Featured/style.css
@@ -48,6 +48,7 @@
     width: 270px;
     height: 40px;
     border: none;
+    float: left;
     background:  #333399;
     color: #fff;
     border-radius: 10px;
@@ -59,19 +60,16 @@
     cursor: pointer;
 }
 .img-body1 {
-    width: 50%;
     height: 265px;
     background-image: url('../../images/header3.jpeg');
     background-size: 100%;
 }
 .img-body2{
-    width: 50%;
     height: 265px;
     background-image: url('../../images/header.jpg');
     background-size: 100%;
 }
 .img-body3 {
-    width: 50%;
     height: 265px;
     background-image: url('../../images/featur4.png');
     background-size: 100%;
